aula sobre hiperlink

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
     <p>Esse é um texto <sub>subscrito.</sub></p>
     
     <p>Esse é um texto <sup>supscrito.</sup></p>
-
+    
+    <!--Criando um hiperlink para outra página-->
+    <a href="sobre.html">sobre</a>
 
   </body>
 
